Fix missing padding on front page without ads

--- a/hsreplaynet/static/styles/home.scss
+++ b/hsreplaynet/static/styles/home.scss
@@ -172,6 +172,10 @@
 		.ad-container {
 			margin-bottom: 10px;
 		}
+
+		&:empty {
+			margin-top: 10px;
+		}
 	}
 
 	.center-ads {
